<resources>

    <string name="app_name">MovieDB_20</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_up_coming">Up Coming</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_popular">Popular</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="title_overview">Overview</string>
    <string name="title_producers">Producers</string>
    <string name="title_release">Release</string>
    <string name="title_genres">Genres</string>
    <string name="title_casts">Casts</string>
    <string name="title_name">Name</string>
    <string name="title_birthday">Birthday</string>
    <string name="title_place_of_birth">Place of birth</string>
    <string name="title_movie">Movie</string>
    <string name="title_biography">Biography</string>
    <string-array name="genres">
        <item name="action">Action</item>
        <item name="adventure">Adventure</item>
        <item name="animation">Animation</item>
        <item name="comedy">Comedy</item>
        <item name="crime">Crime</item>
        <item name="documentary">Documentary</item>
        <item name="drama">Drama</item>
        <item name="family">Family</item>
        <item name="fantasy">Fantasy</item>
        <item name="history">History</item>
        <item name="horror">Horror</item>
        <item name="music">Music</item>
        <item name="mystery">Mystery</item>
        <item name="romance">Romance</item>
        <item name="science_fiction">Science Fiction</item>
        <item name="tv_movie">TV Movie</item>
        <item name="thriller">Thriller</item>
        <item name="war">War</item>
        <item name="western">Western</item>
    </string-array>

</resources>
