<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_film_backdrop"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_230"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_film_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            app:layout_constraintBottom_toTopOf="@+id/text_release_year"
            app:layout_constraintStart_toStartOf="@+id/image_film_backdrop" />

        <TextView
            android:id="@+id/text_release_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            app:layout_constraintBottom_toTopOf="@+id/text_run_time"
            app:layout_constraintStart_toStartOf="@+id/image_film_backdrop" />

        <TextView
            android:id="@+id/text_run_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            app:layout_constraintBottom_toTopOf="@+id/button_add_favorite"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:textSize="@dimen/sp_28"
            app:layout_constraintBottom_toBottomOf="@+id/image_film_backdrop"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/button_add_favorite"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/image_film_backdrop"
            app:layout_constraintStart_toEndOf="@+id/text_vote_average"
            app:srcCompat="@drawable/ic_favorite_border"
            tools:ignore="ContentDescription,MissingConstraints,VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/button_vote"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/image_film_backdrop"
            app:layout_constraintStart_toEndOf="@+id/button_add_favorite"
            app:srcCompat="@drawable/ic_star_border"
            tools:ignore="ContentDescription,MissingConstraints,VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:background="@null"
            android:src="@drawable/ic_play_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/image_film_backdrop"
            app:layout_constraintStart_toEndOf="@+id/button_vote"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/title_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_film_backdrop" />

        <TextView
            android:id="@+id/text_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="start"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@color/color_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_overview"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/title_producers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/text_producers"
            android:layout_width="@dimen/dp_270"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_16"
            android:maxLines="2"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/title_release"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_producers" />

        <TextView
            android:id="@+id/text_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_4"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/text_producers" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/title_genres"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_release_date" />

        <TextView
            android:id="@+id/text_genres"
            android:layout_width="@dimen/dp_270"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_4"
            android:maxLines="2"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/text_release_date" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/title_casts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_genres" />

        <TextView
            android:id="@+id/text_casts"
            android:layout_width="@dimen/dp_270"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_4"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/text_genres" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@color/color_white"
            app:layout_constraintTop_toBottomOf="@+id/text_casts"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/title_casts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="dp_8" />

        <View
            android:id="@+id/view3"
            android:layout_width="@dimen/dp_368"
            android:layout_height="@dimen/dp_0dot5"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@color/color_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_cast" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/title_producers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_producer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="dp_8" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
